fix css contrast issue

--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,7 @@
     top: auto;
     width: 1px;
     height: 1px;
+    color: #000;
     overflow: hidden;
 }
 
